name:                twitter-types
version:             0.1.0
license:             BSD3
license-file:        LICENSE
author:              Takahiro HIMURA
maintainer:          Takahiro HIMURA <taka@himura.jp>
synopsis:            Twitter JSON parser and types
description:         This package provides the types of Twitter resources.
category:            Web
stability:           Experimental
cabal-version:       >=1.10
build-type:          Simple
homepage:            https://github.com/amutake/twitter-types

source-repository head
  type:                git
  location:            git://github.com/amutake/twitter-types.git

library
  exposed-modules:     Web.Twitter.Types
  build-depends:       base== 4.*
                     , http-types
                     , aeson >= 0.3.2.2
                     , bytestring
                     , text
                     , unordered-containers
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010


test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests, .
  main-is:             TypesTest.hs
  build-depends:       base >= 4.0 && < 5
                     , template-haskell
                     , test-framework >= 0.3.3
                     , test-framework-th-prime
                     , test-framework-hunit
                     , HUnit
                     , shakespeare-text
                     , http-types
                     , aeson
                     , attoparsec
                     , bytestring
                     , text
                     , unordered-containers
  ghc-options:         -Wall
