name:                twitter-types
version:             0.1.0
license:             BSD3
license-file:        LICENSE
author:              Shohei Yasutake, Takahiro HIMURA
maintainer:          Shohei Yasutake <amutake.s@gmail.com>
synopsis:            Twitter JSON parser and types
description:         This package provides the types of the Twitter resources.
category:            Web
stability:           Experimental
cabal-version:       >=1.10
build-type:          Simple
homepage:            https://github.com/amutake/twitter-types

source-repository head
  type:                git
  location:            git://github.com/amutake/twitter-types.git

library
  exposed-modules:     Web.Twitter.Types
                       Web.Twitter.Entities
  build-depends:       base== 4.*
                     , http-types
                     , aeson >= 0.3.2.2
                     , bytestring
                     , text
                     , unordered-containers
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010
